@@ -1,3 +1,7 @@
+2005-01-13  Jonathan Pryor  <jonpryor@vt.edu>
+
+	* StdlibTest.cs: Added tests for signal(3) and snprintf(3).
+
 2005-01-05  Jonathan Pryor  <jonpryor@vt.edu>
 
 	* ChangeLog: Started.
